# deepfoot

./: .gitignore  Makefile  pyproject.toml
deepfoot/: main.py  prompt.py  prompt.txt  video_preprocessor.py
